alignment bug fix

--- a/Activity2.css
+++ b/Activity2.css
@@ -34,6 +34,6 @@ tbody tr:nth-child(even) td
 	background-color: yellow;
 }
 
-td::right {
+td:right {
 	text-align: right;
   }
